# tractor_jax_minimal

./: .gitignore  pyproject.toml
tests/: compare_psf_cpu_jax.py  debug_scatter.py  example_multi_image_fitting.py  inspect_cutout_metrics.py  inspect_psf_centers.py  plot_outlier_cutouts.py  reproduce_issue.py  spherex_jax_test.ipynb  test_jax_bucketing.py  test_jax_opt.py  test_jax_optimizer.py  test_jax_optimizer_spherex.py  test_jax_optimizer_spherex_batch.py  test_jax_optimizer_variance.py  test_jax_sharding.py  test_jax_shift.py  test_undersampled_rendering.py  test_wcs_padding.py  utils.py  verify_jax_position.py  verify_tiling.py
tractor/: __init__.py  basics.py  batch_galaxy.py  batch_mixture_profiles.py  batch_psf.py  ellipses.py  engine.py  galaxy.py  jax_optimize.py  lsqr_optimizer.py  miscutils.py  mixture_profiles.py  optimize.py  patch.py  psf.py  wcs.py
tractor/jax/: __init__.py  optimizer.py  rendering.py  tiling.py  tree.py
tractor_jax/: basics.py  brightness.py  ellipses.py  engine.py  galaxy.py  image.py  optimize.py  patch.py  pointsource.py  psf.py  sersic.py  shifted.py  sky.py  tractortime.py  wcs.py
tractor_jax/jax/: optimizer.py  rendering.py  tiling.py  tree.py
